Fixed Duplicate Classes Issue

--- a/Hartree-Fock/Hartree_Fock.ipynb
+++ b/Hartree-Fock/Hartree_Fock.ipynb
@@ -36,11 +36,11 @@
     "#Python Implementation of the Hartree Fock Method\n",
     "#Procedures listed in the code follow as described in Modern Quantum Chemistry: \n",
     "#Introduction to Advanced Electronic Structure Theory, By Attila Szabo and Neil S. Ostlund\n",
-    "import math\n",
     "import sys\n",
+    "sys.path.append(\"..\\\\Comp_Chem_Package\")\n",
     "import numpy as np\n",
     "from molecule import atom\n",
-    "from molecule import vector\n",
+    "from vector import vector\n",
     "from molecule import gaussian\n",
     "from molecule import molecule\n",
     "from notebookImporter import importNotebook\n",
@@ -244,10 +244,7 @@
     "    \n",
     "print(\"-\"*50)\n",
     "print()\n",
-    "print(\"Final SCF Energy: \" + str(E[sizeE-1]))\n",
-    "print()\n",
-    "print(MOEnergy)\n",
-    "print(H)"
+    "print(\"Final SCF Energy: \" + str(E[sizeE-1]))"
    ]
   }
  ],
