--- a/Particle in a Box/Particle in a Box.ipynb
+++ b/Particle in a Box/Particle in a Box.ipynb
@@ -123,6 +123,8 @@
    ],
    "source": [
     "#import all needed packages here\n",
+    "import sys\n",
+    "sys.path.append(\"..\\\\Comp_Chem_Package\")\n",
     "import math\n",
     "import color\n",
     "import ipywidgets as widgets\n",
@@ -360,7 +362,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fa9700e872b4396ab128c6aae76db50",
+       "model_id": "198a486fc8304e9ebcd88e9ac47c1ab4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +376,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8da8d22ac0b41b7a28941f976a42161",
+       "model_id": "6ce3e4052f1a4251bc550dde934da245",
        "version_major": 2,
        "version_minor": 0
       },
@@ -481,13 +483,6 @@
     "\n",
     "#------------------------------------------------------------------------\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
