Potential Energy Surface Notebook Upgrade
-Use of new diatomicConstants data structure to hold Diatomic Constants
-Broke Some Notebooks and need to Fix
-Potential Energy Surface Notebook now works in a limited Fashion with potentials from an external file

--- a/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Harmonic Oscillator Wavefunction & Basis Set\n",
+    "## Harmonic Oscillator Basis Set\n",
     "<br>\n",
     "Solving the Schrödinger equation with a potential defined as the quantum Harmonic Oscillator yields a set of wavefunctions that can be used as basis set for quantum mechanical calculations. The Schrödinger eqation with the Haromic Oscillator is defined as follows: \n",
     "<br><br>\n",
