Adds Table for Wavefunction Energies & Accuracies

--- a/Potential Energy Surface/Potential Energy Surface.ipynb
+++ b/Potential Energy Surface/Potential Energy Surface.ipynb
@@ -274,12 +274,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "179df86eda3e469b81c3f05d881a9e54",
+       "model_id": "d048344aa7544821835d473aa0b46fcf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Combobox(value='ground', description='State', options=('ground', 'excited')), FloatText(…"
+       "ToggleButtons(button_style='info', options=('Use File', 'Use Diatomic Constants'), tooltips=('', 'Use Diatomic…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e165576db2b94fb9a26962ce1101f460",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FileUpload(value={}, accept='.txt', button_style='info', description='Upload', multiple=True)"
       ]
      },
      "metadata": {},
@@ -289,21 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Generating RKR Potential\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 7950/7950 [00:30<00:00, 263.32it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Potential Energy Surface Data Successfully Parsed!\n",
       "Building Rydberg Potential Fit\n",
       "Graphing Rydberg Potential\n"
      ]
@@ -312,13 +312,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 53%|██████████████████████████████████████████▋                                     | 8/15 [00:09<00:11,  1.66s/it]..\\Comp_Chem_Package\\wavefunction.py:110: IntegrationWarning:\n",
+      " 60%|█████████████████████████████████████████████████▊                                 | 9/15 [00:12<00:11,  1.99s/it]..\\Comp_Chem_Package\\wavefunction.py:110: IntegrationWarning:\n",
       "\n",
       "The occurrence of roundoff error is detected, which prevents \n",
       "  the requested tolerance from being achieved.  The error may be \n",
       "  underestimated.\n",
       "\n",
-      " 87%|████████████████████████████████████████████████████████████████████▍          | 13/15 [00:39<00:11,  5.99s/it]"
+      " 73%|████████████████████████████████████████████████████████████▏                     | 11/15 [00:20<00:12,  3.11s/it]"
      ]
     }
    ],
