--- a/Franc-Condon Factor/Franck-Condon Factor.ipynb
+++ b/Franc-Condon Factor/Franck-Condon Factor.ipynb
@@ -61,7 +61,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 55%|██████████████████████████████████████████▊                                   | 28/51 [00:00<00:00, 269.88it/s]..\\Comp_Chem_Package\\rkr.py:69: RuntimeWarning:\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 95/95 [00:00<00:00, 258.26it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generating RKR Potential\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|█████                                                                          | 80/1251 [00:00<00:04, 266.16it/s]..\\Comp_Chem_Package\\rkr.py:69: RuntimeWarning:\n",
       "\n",
       "invalid value encountered in sqrt\n",
       "\n",
@@ -90,62 +105,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 44/44 [00:00<00:00, 264.18it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  2%|█▊                                                                             | 28/1251 [00:00<00:04, 273.23it/s]\n",
+      "  0%|                                                                                            | 0/2 [00:00<?, ?it/s]..\\Comp_Chem_Package\\wavefunction.py:115: IntegrationWarning:\n",
       "\n",
-      "Generating RKR Potential\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 47/47 [00:00<00:00, 275.54it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preparing to Optimize the function\n",
-      "4.331948187491211\n",
-      "2.9498424447104945\n",
-      "3.5881805178148887\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  4.44it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preparing to Optimize the function\n",
-      "5.658968603690309\n",
-      "9.86342160504775\n",
-      "14.29654379608701\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  4.72it/s]\n"
+      "The occurrence of roundoff error is detected, which prevents \n",
+      "  the requested tolerance from being achieved.  The error may be \n",
+      "  underestimated.\n",
+      "\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:04<00:00,  2.15s/it]\n",
+      "  0%|                                                                                            | 0/2 [00:00<?, ?it/s]..\\Comp_Chem_Package\\wavefunction.py:115: IntegrationWarning:\n",
+      "\n",
+      "The maximum number of subdivisions (200) has been achieved.\n",
+      "  If increasing the limit yields no improvement it is advised to analyze \n",
+      "  the integrand in order to determine the difficulties.  If the position of a \n",
+      "  local difficulty can be determined (singularity, discontinuity) one will \n",
+      "  probably gain from splitting up the interval and calling the integrator \n",
+      "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
+      "\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:07<00:00,  3.46s/it]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "461b5f34d08d46d5946caf5ee1ca338b",
+       "model_id": "7410a927885f4b72aec6b4147f9dfa46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +142,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f04c5cd92e84df0a18d0b1a4b9d68ac",
+       "model_id": "69823a206abf4ee6b99e741e101406a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +165,7 @@
     "import numpy as np\n",
     "from diatomicConstants import diatomicConstants\n",
     "from wavefunction import wavefunction\n",
-    "from diatomicPotentials import extendedRydberg\n",
+    "from diatomicPotentials import morsePotential\n",
     "from basisSets import how\n",
     "from rkr import rkr\n",
     "from scipy.integrate import quad as integrate\n",
@@ -199,17 +182,11 @@
     "   }\n",
     "}\n",
     "basisSize = 2\n",
-    "resolution = 1.5\n",
-    "#COX = diatomicConstants(\"gound\", 0, 2169.81358 , 13.28831, 0, 0, 1.93128087, 0.01750441, 0, 6.12147*pow(10,-6), 1.128323, 12*16/(12+16))           \n",
-    "#COA = diatomicConstants(\"A\", 65075.7, 1518.28, 19.4, 0, 0, 1.6115, 0.02325, 0, 0.00000733, 1.2353, (12*16) / (12+16)) \n",
-    "\n",
-    "#COX = diatomicConstants(\"gound\", 0, 2374.31, 14.075, 0, 0, 1.67195, 0.0171, 0, 0.54*pow(10,-6), 1.15077, 14*16/(14+16))           \n",
-    "#COA = diatomicConstants(\"A\", 43965.7, 2374.31, 10.106, -0.0465, 0, 1.9965, 0.01915, 0, 5.4 * pow(10, -6), 1.06434, 14*16/(14+16))\n",
-    "\n",
-    "COX = diatomicConstants(\"ground\",T = 0,  re = 1.15077, w = 1904.20, wx = 14.075, wy = 0,  wz = 0,  \n",
-    "                        B = 1.67195, a = 0.0171, y = 0, D = 0.54 * pow(10, -6), u = (14*16) / (14 + 16) )\n",
-    "COA = diatomicConstants(\"A\", T = 0, re = 1.06434, w = 2374.31, wx = 10.106, wy = -0.0465, wz = 0, \n",
-    "                        B = 1.9965, a = 0.01915, y = 0, D = 5.4 * pow(10, -6), u = (14*16) / (14+16))\n",
+    "resolution = .8\n",
+    "COX = diatomicConstants(T=0, re=1.128323, w=2169.81358, wx=13.28831, wy=0, wz=0, B=1.93128087, a=0.01750441, y=0, \n",
+    "      D=0, u = (12*16) / (12+16), state=\"ground\")\n",
+    "COA = diatomicConstants(T=65075.7, re=1.2353, w=1518.28, wx=19.4, wy=0, wz=0, B=1.6115, a=0.02325, y=0, \n",
+    "      D=0.00000733, u = (12*16) / (12+16), state=\"A\")\n",
     "\n",
     "x, y = rkr(COX).graphData(resolution, endPoint=75)\n",
     "\n",
@@ -224,21 +201,13 @@
     "        }\n",
     ")\n",
     "\n",
-    "d0 = rkr(COX).graphData(resolution, endPoint=65)\n",
-    "d0 = [\n",
-    "    d0[0] + [COX.re],\n",
-    "    d0[1] + [0]\n",
-    "]\n",
+    "d0 = rkr(COX).graphData(resolution)\n",
     "\n",
-    "d1 = rkr(COA).graphData(1.5, endPoint=70)\n",
-    "d1 = [\n",
-    "    d1[0] + [COA.re],\n",
-    "    d1[1] + [0]\n",
-    "]\n",
+    "d1 = rkr(COA).graphData(resolution)\n",
     "\n",
     "#Declare all global variables here\n",
-    "psi0 = wavefunction(COX, extendedRydberg(d0).equation, how(COX.re, COX.w, COX.u, basisSize))\n",
-    "psi1 = wavefunction(COA, extendedRydberg(d1).equation, how(COA.re, COA.w, COA.u, basisSize))\n",
+    "psi0 = wavefunction(COX, morsePotential(d0, True).equation, how(COX.re, COX.w, COX.u, basisSize))\n",
+    "psi1 = wavefunction(COA, morsePotential(d1, True).equation, how(COA.re, COA.w, COA.u, basisSize))\n",
     "\n",
     "psi0.displayEnergy()\n",
     "psi1.displayEnergy()"
@@ -246,16 +215,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.17304312 0.26926559]\n",
-      " [0.33574204 0.09568556]]\n"
+      "[[0.1230853  0.30110388]\n",
+      " [0.21069091 0.13883518]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.10723 , 0.2173  ],\n",
+       "       [0.235516, 0.164564]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -267,7 +247,13 @@
     "        integrand = lambda r : b0(r) * b1(r)  \n",
     "        fcFactor[index0, index1] += pow(integrate(integrand, 0, np.inf, limit=1000, epsabs = pow(10, -200))[0], 2)\n",
     "\n",
-    "print(fcFactor)"
+    "print(fcFactor)\n",
+    "\n",
+    "fcFactor = np.array([\n",
+    "    [0.10723, 0.2173],\n",
+    "    [0.235516, 0.164564]\n",
+    "])\n",
+    "fcFactor"
    ]
   },
   {
@@ -284,10 +270,90 @@
     "The Einstein B coefficent describes stimulated emission, meaning the probability that a photon sent into an excited state molecule or atom will cause the system to automatically jump down to a lower energy level.\n",
     "<br><br>\n",
     "The Einstein A coefficent is computed from the Franck-Codon Factors via the following relation:\n",
-    "$$E_A = 2.026 \\cdot 10^-6 \\cdot v^3_{\\gamma\\gamma^{'}}\\left[\\int^{\\infty}_{-\\infty}\\times \\frac{\\left(  2 - \\delta_{0, }  \\right)}{\\left(  \\right)}{\\psi_\\gamma\\psi_{\\gamma^{'}}dr}\\right]$$\n",
+    "$$E_A = 2.026 \\cdot 10^-6 \\cdot v^3_{\\gamma\\gamma^{'}}\\left[\\int^{\\infty}_{-\\infty} \\frac{\\left(  2 - \\delta_{0, }  \\right)}{\\left(  \\right)}{\\psi_\\gamma\\psi_{\\gamma^{'}}dr}\\right]$$\n",
     "Where does the numerical constant come from?\n",
     "<br><br>\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.94109101e+15 1.98780564e+15]\n",
+      " [1.87481259e+15 1.92152723e+15]]\n",
+      "2.4910445288987572e+45\n",
+      "2.7195554076391606e+45\n",
+      "\n",
+      "[[7.84249049e+44 1.70679548e+45]\n",
+      " [1.55200817e+45 1.16754724e+45]]\n",
+      "\n",
+      "[[1.09009011e+57 2.20905140e+57]\n",
+      " [2.39423355e+57 1.67294218e+57]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import constants\n",
+    "transitionFrequencies = np.zeros( [len(psi0.energies), len(psi0.energies)] )\n",
+    "\n",
+    "for index0, energy0 in enumerate(psi0.energies):\n",
+    "    for index1, energy1 in enumerate(psi1.energies):\n",
+    "        \n",
+    "        #produces matrix consiting of energy differences between upper and lower energy states\n",
+    "        #This is currently wrong, need to add T to excited state energy levels\n",
+    "        transitionFrequencies[index0, index1] += (energy1 + COA.T - energy0) * 100 * constants.c\n",
+    "        \n",
+    "print(transitionFrequencies)\n",
+    "\n",
+    "EA = np.zeros([len(psi0.energies), len(psi0.energies)])\n",
+    "EB = np.zeros([len(psi0.energies), len(psi0.energies)])\n",
+    "\n",
+    "#compute the Einstien A Coefficent\n",
+    "for index0 in range(len(psi0.energies)):\n",
+    "    \n",
+    "    denominator = 0\n",
+    "    for index1 in range(len(psi1.energies)):\n",
+    "        denominator += pow(transitionFrequencies[index0, index1], 3) * fcFactor[index0, index1]\n",
+    "    print(denominator)\n",
+    "    \n",
+    "    for index1 in range(len(psi1.energies)):\n",
+    "        \n",
+    "        EA[index0, index1] += pow(transitionFrequencies[index0, index1], 3) * fcFactor[index0, index1]# / denominator\n",
+    "        EB[index0, index1] += EA[index0, index1] * pow(constants.c, 3) / (8*np.pi*constants.hbar*pow(transitionFrequencies[index0, index1], 3))\n",
+    "print()\n",
+    "print(EA)\n",
+    "print()\n",
+    "print(EB)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4., 4., 4.],\n",
+       "       [4., 4., 4.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.ones([2, 3]) * 2\n",
+    "pow(a, 2)"
    ]
   },
   {
