Adds working NistScraper
-Has issue when there are coupled states
-Need to add reduced atomic mass

--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -351,7 +351,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65065025be454bbcafccd2610a61f5b1",
+       "model_id": "41c560a9d0684bfebb6484327a0d0186",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +367,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2489f72b5cd648c49a7f9ddf62666e99",
+       "model_id": "a7c76f2de1c142b79397081db7ac98cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,13 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95b460ace32645b7b201836d9ee370d1",
+       "model_id": "01530f215d2e45a2a5f89fb7fb3d36b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -470,7 +470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9d7474cc6b44f92876ddfa0cc30c39e",
+       "model_id": "3498588ffde74f91bc62dda9f0be4f9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -539,7 +539,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "#Multiplying psis, use * ignore prob distrib\n",
+    "#Default start = 0, end = 4\n",
+    "#Plot multiplication of two \n",
+    "pes = potentialEnergySurface(method=rkr, fitting=er)\n",
+    "\n",
+    "rkr.graph()\n",
+    "er = exRyd(rkr)\n",
+    "\n",
+    "pes = rkr(fitting=er)\n",
+    "\n",
+    "pes = er(method=rkr)\n",
+    "\n",
+    "sH2 = schord(inputs)\n",
+    "sCO2 = schord(inputsCo2)\n",
+    "\n",
+    "sh2.getWavefunctions()\n",
+    "sCo2.solve()\n",
+    "\n",
+    "sH2 = schord(inputs)\n",
+    "sCO2 = schord(inputsCo2)\n",
+    "\n",
+    "[[wavefuncs], [energy levels]]\n",
+    "\n",
+    "T = kineticEnergyOperator(basisSet)\n",
+    "V = potentialEnergyOperator(pes, basisSet)\n",
+    "\n",
+    "H = hamiltonian(T, V)\n",
+    "H = hamiltonian(pes, basisSet)\n",
+    "\n",
+    "schrod(pes, basisSet)\n",
+    "\n",
+    "schrod(H, bSet)"
+   ]
   },
   {
    "cell_type": "code",
