Webscraper state name fexibility improved
-Ending #s with links in state names can now be included or omitted and webscraper will still function as intended.

--- a/Comp_Chem_Package/nistScraperTester.ipynb
+++ b/Comp_Chem_Package/nistScraperTester.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "diatomicConstants(name='CO', state='ground', T=0.0, w=2169.81358, wx=13.28831, wy=None, wz=0, B=1.93128087, a=0.01750441, y=None, D=6.12147e-06, re=1.128323, u=6.8562086380025615)"
+       "diatomicConstants(name='I2', state='D 1Σu+', T=40679.0, w=104.41, wx=0.2343, wy=0.00045, wz=0, B=None, a=None, y=None, D=None, re=None, u=63.45223595)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,7 +19,7 @@
    "source": [
     "from nistScraper import *\n",
     "\n",
-    "getDiatomicConstants(\"630-08-0\")"
+    "getDiatomicConstants(\"I2\", \"D 1Σu+ \")"
    ]
   },
   {
@@ -50,8 +50,16 @@
     "### Questions\n",
     "### Is Beta needed?\n",
     "### Only two coupled states for the ground? And only two variations 1/2, 3/2\n",
-    "###    if not for ground, could be a problem as unsure of how to identify which is the higher or lower ground state"
+    "###    if not for ground, could be a problem as unsure of how to identify which is the higher or lower ground state\n",
+    "### PSI4 for Testing"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
