--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -351,7 +351,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41c560a9d0684bfebb6484327a0d0186",
+       "model_id": "e427ae34a9ad4a8db2124121c8b54a63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +367,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7c76f2de1c142b79397081db7ac98cb",
+       "model_id": "b997d3749d614c21a0f7483a3c9b2958",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,13 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01530f215d2e45a2a5f89fb7fb3d36b7",
+       "model_id": "9d44b03ef2b24addbb2c31d7d1e3354b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -470,7 +470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3498588ffde74f91bc62dda9f0be4f9c",
+       "model_id": "9e9720400a614cd1a7444cd3a69a7a99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -494,6 +494,7 @@
     "\n",
     "\n",
     "n1 = how(20, buildDiatomicConstant(\n",
+    "    name = \"CO\",\n",
     "    state = \"X\",\n",
     "    T = 0,\n",
     "    w = 2169.81358,\n",
@@ -509,6 +510,7 @@
     "))\n",
     "\n",
     "bset = basisSet(how, 10, buildDiatomicConstant(\n",
+    "    name = \"CO\", \n",
     "    state = \"X\",\n",
     "    T = 0,\n",
     "    w = 2169.81358,\n",
@@ -536,9 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-dc0413f93adf>, line 22)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-dc0413f93adf>\"\u001b[1;36m, line \u001b[1;32m22\u001b[0m\n\u001b[1;33m    [[wavefuncs], [energy levels]]\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#Multiplying psis, use * ignore prob distrib\n",
