--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -343,7 +343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ded4d59e489e459681fb8d9d238691ec",
+       "model_id": "377e2646440a43fc9ddfdfad4ca5bfe5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aaf1607b081e48459cb0885ce888ecea",
+       "model_id": "8be764b45a9a4c4abb8279a35f1a1277",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,6 +373,11 @@
    ],
    "source": [
     "#Widgets Code\n",
+    "\n",
+    "#code to determine the appropriate start and end values\n",
+    "start = round(-sqrt(-2 * log(pow(10, -15)) / alpha) + Re, 2)\n",
+    "end = round(sqrt(-2 * log(pow(10, -15)) / alpha) + Re, 2)\n",
+    "\n",
     "resolution = widgets.BoundedFloatText(\n",
     "    value = 100,\n",
     "    min = .001, \n",
@@ -403,13 +408,13 @@
     ")\n",
     "\n",
     "startR = widgets.FloatText(\n",
-    "    value = 0, \n",
+    "    value = start, \n",
     "    step = .1, \n",
     "    description = '<p style=\"font-family:verdana;font-size:15px\">Start r</p>'\n",
     ")\n",
     "\n",
     "endR = widgets.FloatText(\n",
-    "    value = 3.5,\n",
+    "    value = end,\n",
     "    step = .1, \n",
     "    description = '<p style=\"font-family:verdana;font-size:15px\">End r</p>'\n",
     ")\n",
@@ -440,44 +445,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'type' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-41db53653580>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mhow\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnistScraper\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mhow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiatomicConstants\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mA:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Comp_Chem_Package\\how.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, diatomicConstants, n)\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdiatomicConstants\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mre\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdiatomicConstants\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"re\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfunctionName\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Harmonic Oscillator n=\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'type' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "from how import *\n",
-    "from nistScraper import *\n",
-    "how(getDiatomicConstants(), n=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "926ae3e453a44d1db62dc92af96c00f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-1bc0ffc63aca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m n1 = how(20, buildDiatomicConstant(\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"CO\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"X\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mA:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Comp_Chem_Package\\how.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, diatomicConstants, n)\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdiatomicConstants\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mre\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdiatomicConstants\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"re\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfunctionName\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Harmonic Oscillator n=\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb0b2ed51d0e4ede823c6dbdeebcf8af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -486,106 +487,17 @@
     "\n",
     "from how import *\n",
     "from basisSet import *\n",
-    "from diatomicConstants import *\n",
+    "from nistScraper import *\n",
     "\n",
+    "dc = getDiatomicConstants(\"H2\")\n",
     "\n",
-    "n1 = how(20, buildDiatomicConstant(\n",
-    "    name = \"CO\",\n",
-    "    state = \"X\",\n",
-    "    T = 0,\n",
-    "    w = 2169.81358,\n",
-    "    wx = 13.28831,\n",
-    "    wy = 0,\n",
-    "    wz = 0, \n",
-    "    B = 1.93128087,\n",
-    "    a = 0.01750441,\n",
-    "    y = 0,\n",
-    "    D = 6.12147 * pow(10, -6),\n",
-    "    re = 1.128323,\n",
-    "    u = (12*16) / (12+16)\n",
-    "))\n",
+    "n1 = how(dc, 20)\n",
     "\n",
-    "bset = basisSet(how, 10, buildDiatomicConstant(\n",
-    "    name = \"CO\", \n",
-    "    state = \"X\",\n",
-    "    T = 0,\n",
-    "    w = 2169.81358,\n",
-    "    wx = 13.28831,\n",
-    "    wy = 0,\n",
-    "    wz = 0, \n",
-    "    B = 1.93128087,\n",
-    "    a = 0.01750441,\n",
-    "    y = 0,\n",
-    "    D = 6.12147 * pow(10, -6),\n",
-    "    re = 1.128323,\n",
-    "    u = (12*16) / (12+16)\n",
-    "))\n",
+    "bset = basisSet(dc, how, 10)\n",
     "\n",
     "n1.graph()\n",
     "bset.graph()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#Multiplying psis, use * ignore prob distrib\n",
-    "#Default start = 0, end = 4\n",
-    "#Plot multiplication of two \n",
-    "pes = potentialEnergySurface(method=rkr, fitting=er)\n",
-    "\n",
-    "rkr.graph()\n",
-    "er = exRyd(rkr)\n",
-    "\n",
-    "pes = rkr(fitting=er)\n",
-    "\n",
-    "pes = er(method=rkr)\n",
-    "\n",
-    "sH2 = schord(inputs)\n",
-    "sCO2 = schord(inputsCo2)\n",
-    "\n",
-    "sh2.getWavefunctions()\n",
-    "sCo2.solve()\n",
-    "\n",
-    "sH2 = schord(inputs)\n",
-    "sCO2 = schord(inputsCo2)\n",
-    "\n",
-    "[[wavefuncs], [energy levels]]\n",
-    "\n",
-    "T = kineticEnergyOperator(basisSet)\n",
-    "V = potentialEnergyOperator(pes, basisSet)\n",
-    "\n",
-    "H = hamiltonian(T, V)\n",
-    "H = hamiltonian(pes, basisSet)\n",
-    "\n",
-    "schrod(pes, basisSet)\n",
-    "\n",
-    "schrod(H, bSet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
